[package]
name = "sgr"
version = "0.1.0"
authors = ["Gabriel Arruda <arrudagates@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
getrandom = { version = "*", features = ["js"] }
rand = "*"
anyhow = "1.0.40"
serde = "1.0.126"
serde_json = "1.0.64"
